Implement camera enumerator
Enumerate all available camera devices at start: those are
video devices /dev/videoX which support V4L2, streaming and
have non-zero width/height.

Signed-off-by: Oleksandr Andrushchenko <oleksandr_andrushchenko@epam.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,6 +21,8 @@ include_directories(
 
 set(SOURCES
 	main.cpp
+	CameraBackend.cpp
+	CameraEnumerator.cpp
 )
 
 ################################################################################
