--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,6 +23,7 @@ set(SOURCES
 	main.cpp
 	CameraBackend.cpp
 	CameraEnumerator.cpp
+	Camera.cpp
 )
 
 ################################################################################
