Streaming on - first working test
Signed-off-by: Oleksandr Andrushchenko <oleksandr_andrushchenko@epam.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,9 +24,8 @@ set(SOURCES
 	Backend.cpp
 	Enumerator.cpp
 	Device.cpp
+	DeviceMmap.cpp
 	Camera.cpp
-	Buffers.cpp
-	BufferStorage.cpp
 )
 
 ################################################################################
