Move Device to Camera, update CameraManager
Signed-off-by: Oleksandr Andrushchenko <oleksandr_andrushchenko@epam.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,10 +23,9 @@ set(SOURCES
 	main.cpp
 	Backend.cpp
 	CommandHandler.cpp
-	Device.cpp
-	DeviceMmap.cpp
-	DeviceDmabuf.cpp
 	Camera.cpp
+	CameraMmap.cpp
+	CameraDmabuf.cpp
 	CameraManager.cpp
 )
 
