Implement until buf get layout
Signed-off-by: Oleksandr Andrushchenko <oleksandr_andrushchenko@epam.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,6 +27,7 @@ set(SOURCES
 	CameraMmap.cpp
 	CameraDmabuf.cpp
 	CameraManager.cpp
+	V4L2ToXen.cpp
 )
 
 ################################################################################
